# climate-rag-streamlit

./: .env.example  .gitignore  DEPLOY.md  EVAL_GROQ_PIPELINE.md  README.md  app.py  changes.md  config.py  contextual-hvac-rag.cmd  contextual_eval_dataset.jsonl  contextual_hvac_rag.py  evaluation_results.json  fix_annotations.py  fix_llm.py  format_email.py  hf_local.py  html_renderer.py  ingest.py  ingest_v2.py  llm.py  optimized_prompt.txt  packages.txt  pipeline_utils.py  prefpo_contexts.json  prefpo_optimization_history.json  pyproject.toml  query.py  requirements.txt  rerank.py  rerank_v2.py  retrieve.py  retrieve_v2.py  revalidated_metrics.json  run_batch_evaluations.py  run_contextual_eval.py  run_dual_eval.py  run_prefpo_opt_v2.py  run_prefpo_optimization.py
.github/workflows/: eval-ci.yml
.streamlit/: config.toml
chroma_db/3ff40667-0b8a-4268-8ee5-3f84a98fce42/: index_metadata.pickle
chroma_db/9d7fc789-a725-46fa-b593-6e98cf6fa1c6/: index_metadata.pickle
chroma_db/d8aa34d5-d534-4b3e-8d5b-c141f19d2764/: index_metadata.pickle
core/: query.py  rerank_v2.py  retrieve.py  retrieve_v2.py
eval/: compat_email_payload.py  generation_metrics.py  generation_metrics_ollama.py  latency.py  loader.py  metrics.py  normalize.py  report_contract.py  run.py  writers.py
eval_out/: per_query.jsonl  summary.json
ingestion/: ingest_v2.py
qdrant_db_ci/: meta.json
results/prefpo_rag/run_20260423_050541_30804f/: config.json
tests/: test_doc_first_pipeline.py  test_eval_pipeline.py  test_report_contract.py
tests/fixtures/: golden_smoke.csv
ui/: app.py  html_renderer.py
utils/: pipeline_utils.py  voice.py
(+1 files in other folders)
